# prolog_call_cpp

./: .gitignore  CMakeLists.txt  README.md
prolog/: CMakeLists.txt  foolib.cpp  main.pl
